@@ -1,6 +1,6 @@
 Package: spatstat.explore
-Version: 3.5-3.010
-Date: 2025-11-16
+Version: 3.5-3.011
+Date: 2025-11-17
 Title: Exploratory Data Analysis for the 'spatstat' Family
 Authors@R: c(person("Adrian", "Baddeley", 
                     role = c("aut", "cre", "cph"),
