@@ -321,6 +321,7 @@ export("markconnect")
 export("markcorr")
 export("markcorrint")
 export("markcrosscorr")
+export("markequal")
 export("markmarkscatter")
 export("markmean")
 export("marks.ssf")
